--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,10 +2,18 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.text_field :title %><br>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %><br>
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: true %><br>
+    
+    <%= f.fields_for :notes do |note_field| %>
+      <%= note_field.label :content %>
+      <%= note_field.text_field :content %><br>
+      <% end %>
 
   <%= f.submit %>
-<% end %>
+ <% end %>
 
 
